# gan_ebm

./: .gitignore  arch.md  arch_req.md  augmentations.py  dataset.py  dem.py  dgm.py  ebgan.ipynb  energy_discriminator.py  gan_ebm.ipynb  gan_generate.py  generator.py  process.ipynb  pyproject.toml  train_ebgan.py  train_gan_ebm.py  transforms.py
configs/: __init__.py  schedule.yaml  training.yaml
outputs/gan_ebm/ablation_results/: ablation_results_run1.csv  ablation_results_run1.json  ablation_results_run2.csv  ablation_results_run2.json
outputs/gan_ebm/final_metrics/: final_metrics_history.csv
